[feat] finished w3p2 RBAC local test