@@ -9,6 +9,8 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -16,6 +18,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -48,8 +51,10 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
 
     Long userId = jwtUtil.getUserIdFromToken(token);
-
-    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(userId, null, Collections.emptyList());
+    String role = jwtUtil.getRoleFromToken(token);
+    List<GrantedAuthority> authorities =
+            List.of(new SimpleGrantedAuthority("ROLE_" + role));
+    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(userId, null, authorities  );
 
     authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
     SecurityContextHolder.getContext().setAuthentication(authentication);
@@ -58,14 +63,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
   }
 
   private boolean isPublicEndpoint(String uri) {//can be accessed without authentication
-    return uri.startsWith("/admin/product.html") ||
-            uri.startsWith("/admin/auth.html") ||
-            uri.startsWith("/admin/campaign.html") ||
-            uri.startsWith("/admin/checkout.html") ||
-            uri.startsWith("/js/product.js") ||
+    return  uri.startsWith("/js/product.js") ||
             uri.startsWith("/swagger-ui") ||
             uri.startsWith("/v3/api-docs") ||
-            uri.startsWith("/api/v1/admin/upload") ||
             uri.startsWith("/api/v1/user/signin") ||
             uri.startsWith("/api/v1/user/signup") ||
             uri.startsWith("/api/v1/products") ||
